<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">B00627286</string>
    <string name="action_settings">Settings</string>
    <string name="pump">Pump</string>
    <string name="busrail">Bus / Rail</string>
    <string name="walkcycle">Walk / Cycle</string>
    <string name="stats">Statistics</string>
    <string name="guide">Guide</string>
    <string name="radbtnA">Main Vehicle</string>
    <string name="radbtnB">Secondary Vehicle</string>
    <string name="veh_tBox">Vehicle ID</string>
    <string name="editTextOdometer">Enter Miles</string>
    <string name="odometer">After Refill Enter Odometer Mileage</string>
    <string name="save">CONFIRM</string>
    <string name="instructOnFuelG">Set Date &amp; New Location Of Fuel Gauge Pin (0 to 24)</string>
    <string name="resource">00</string>
    <string name="setAllPump">CONFIRM</string>
    <string name="atPumpCost">Enter Total Fill Cost</string>
    <string name="atPumpVolume">Enter Total Litres Filled</string>
    <string name="google_maps_api_key">YOUR_API_KEY_HERE</string>
    <string name="button_start_tracking">Begin Journey</string>
    <string name="button_stop_tracking">End Journey</string>
    <string name="button_reset">Reset</string>
    <string name="button_ok">OK</string>
    <string name="menuitem_hybrid">Hybrid</string>
    <string name="menuitem_map">Map</string>
    <string name="menuitem_satellite">Satellite</string>
    <string name="results">Distance and Average Speed</string>
    <string name="results_format">Distance: %1$.1fKM %2$.1fMI\nAverage speed: %3$.1fKPH %4$.1fMPH</string>
    <string name="toast_signal_acquired">GPS signal acquired</string>
    <string name="toast_signal_lost">GPS signal lost</string>
</resources>
